src/main/java/com/example/project_v2/_core/errors/exception/ApiException401.java
package com.example.project_v2._core.errors.exception;

public class ApiException401 extends RuntimeException {
    public ApiException401(String msg){
        super(msg);
    }
}
